# markdown-include-variants

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  release-notes.md
.github/: dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: add-labels.yml  bump-pre-commit-hooks.yml  check-labels.yml  create-draft-release.yml  issue-manager.yml  labeler.yml  latest-changes.yml  pre-commit.yml  prepare-release.yml  publish.yml  smokeshow.yml  test.yml  zizmor.yml
docs_src/all_variants/: tutorial001_an_py311.py
docs_src/all_variants_folder/app_an/: tutorial001.py
docs_src/all_variants_folder/app_an_py310/: tutorial001.py
docs_src/all_variants_folder/app_an_py39/: tutorial001.py
docs_src/all_variants_folder/app_py310/: tutorial001.py
docs_src/all_variants_folder/app_py39/: tutorial001.py
docs_src/no_py39/: tutorial001.py
docs_src/only_py_no_an/: tutorial001_py311.py
scripts/: format.sh  lint.sh  prepare_release.py
src/markdown_include_variants/: __init__.py  _main.py
tests/: test_all_variants.py  test_all_variants_folder.py  test_another_preferred_variant.py  test_no_py39.py  test_only_preview.py  test_only_py310.py  test_only_py310_no_an_folder.py  test_only_py_no_an.py  test_prepare_release.py  test_simple_hl.py  test_simple_ln.py  test_simple_ln_hl.py  test_simple_no_configs.py  test_simple_title.py  test_up_to_py39.py
